--- a/1901-2000.md
+++ b/1901-2000.md
@@ -8,3 +8,19 @@
 遍历第二个矩形里的岛屿，考虑这个岛屿中是否有值在第一个里面是`0`
 # 1906. Minimum Absolute Difference Queries
 根据数据范围，考虑每个区间`1`到`100`的个数，每个查询在`1-100`中查找是否出现
+# 1909. Remove One Element to Make the Array Strictly Increasing
+找到下降点，判断当前位置跟前前位置的大小关系，决定删除哪一个（对当前元素赋值）
+# 1910. Remove All Occurrences of a Substring
+暴力删除
+# 1911. Maximum Alternating Subsequence Sum
+动态规划，记录之前奇偶的最大值
+# 1912. Design Movie Rental System
+多种数据结构映射
+# 1913. Maximum Product Difference Between Two Pairs
+找最大和最小的两个数
+# 1914. Cyclically Rotating a Grid
+可以将每层的坐标先存下来再赋值
+# 1915. Number of Wonderful Substrings
+奇偶状态压缩
+# 1916. Count Ways to Build Rooms in an Ant Colony
+拓扑排序的个数，对每个父节点，子节点分块`C(size[p],size[c])`，对每个子节点又可以组合
