--- a/1901-2000.md
+++ b/1901-2000.md
@@ -24,3 +24,11 @@
 奇偶状态压缩
 # 1916. Count Ways to Build Rooms in an Ant Colony
 拓扑排序的个数，对每个父节点，子节点分块`C(size[p],size[c])`，对每个子节点又可以组合
+# 1920. Build Array from Permutation
+直接构造
+# 1921. Eliminate Maximum Number of Monsters
+贪心取最先到达的，使用`double`操作，可能有精度问题，对`a>=b`可以使用`a+1e-8>=b`来避免
+# 1922. Count Good Numbers
+快速幂
+# 1923. Longest Common Subpath
+二分答案，字符串`hash`判断
