--- a/1901-2000.md
+++ b/1901-2000.md
@@ -32,3 +32,24 @@
 快速幂
 # 1923. Longest Common Subpath
 二分答案，字符串`hash`判断
+# 1925. Count Square Sum Triples
+预处理`c`平方，枚举`a`和`b`
+# 1926. Nearest Exit from Entrance in Maze
+`bfs`
+# 1927. Sum Game
+分类讨论
+# 1928. Minimum Cost to Reach Destination in Time
+加入时间维度，`dp[t][i]`表示`t`时刻到`i`点的最小花费，`t`只能由小于`t`的的时刻转移，无后效性
+# 1929. Concatenation of Array
+直接拼接
+# 1930. Unique Length-3 Palindromic Subsequences
+枚举每个字母的首次和末次出现位置，统计该区间之中有多少个不同字符
+# 1931. Painting a Grid With Three Different Colors
+三进制状压，可以用两位四进制表示三进制
+``` java
+for (int i = 0; i < m * 2; i += 2) {
+    int j = mask >> i & 3;
+}
+```
+# 1932. Merge BSTs to Create Single BST
+模拟合并过程
