--- a/1901-2000.md
+++ b/1901-2000.md
@@ -53,3 +53,4 @@ for (int i = 0; i < m * 2; i += 2) {
 ```
 # 1932. Merge BSTs to Create Single BST
 模拟合并过程
+# 1935. Maximum Number of Words You Can Type
