--- a/1901-2000.md
+++ b/1901-2000.md
@@ -53,4 +53,9 @@ for (int i = 0; i < m * 2; i += 2) {
 ```
 # 1932. Merge BSTs to Create Single BST
 模拟合并过程
-# 1935. Maximum Number of Words You Can Type
+# 1935. Maximum Number of Words You Can Typ
+模拟
+# 1936. Add Minimum Number of Rungs
+贪心的往区间里放
+# 1937. Maximum Number of Points with Cost
+动态规划，拆开绝对值，转移的时候维护左边和右边可能的最优转移
