--- a/1901-2000.md
+++ b/1901-2000.md
@@ -59,3 +59,5 @@ for (int i = 0; i < m * 2; i += 2) {
 贪心的往区间里放
 # 1937. Maximum Number of Points with Cost
 动态规划，拆开绝对值，转移的时候维护左边和右边可能的最优转移
+# 1938. Maximum Genetic Difference Query
+离线查询，`dfs`遍历，维护`trie`树，递归的时候删除（清`cnt`）
