--- a/1901-2000.md
+++ b/1901-2000.md
@@ -61,3 +61,16 @@ for (int i = 0; i < m * 2; i += 2) {
 动态规划，拆开绝对值，转移的时候维护左边和右边可能的最优转移
 # 1938. Maximum Genetic Difference Query
 离线查询，`dfs`遍历，维护`trie`树，递归的时候删除（清`cnt`）
+# 1941. Check if All Characters Have Equal Number of Occurrences 
+记录次数
+# 1942. The Number of the Smallest Unoccupied Chair
+将所有数字放入`treeset`中，每次取的时候将可以离开的人占用的位置释放
+# 1943. Describe the Painting
+差分数组，记录分割点
+# 1944. Number of Visible People in a Queue
+能看到的人是单调递增的，因此单调栈从后往前遍历
+# 1945. Sum of Digits of String After Convert
+模拟
+# 1947. Maximum Compatibility Score Sum
+`km`匹配，枚举全排列、状压都可以
+# 
