--- a/1901-2000.md
+++ b/1901-2000.md
@@ -73,4 +73,5 @@ for (int i = 0; i < m * 2; i += 2) {
 模拟
 # 1947. Maximum Compatibility Score Sum
 `km`匹配，枚举全排列、状压都可以
-# 
+# 1948. Delete Duplicate Folders in System
+`dfs`子树序列化，看是否存在一样的
