--- a/1901-2000.md
+++ b/1901-2000.md
@@ -75,3 +75,11 @@ for (int i = 0; i < m * 2; i += 2) {
 `km`匹配，枚举全排列、状压都可以
 # 1948. Delete Duplicate Folders in System
 `dfs`子树序列化，看是否存在一样的
+# 1952. Three Divisors
+遍历判断
+# 1953. Maximum Number of Weeks for Which You Can Work
+当最长的小于等于剩下的和加`1`即可全选完`longest≤rest+1`
+# 1954. Minimum Garden Perimeter to Collect Enough Apples
+把`x`和`y`分开看，找规律
+# 1955. Count Number of Special Subsequences
+动态规划，考虑当前值可以组成的个数
