--- a/1901-2000.md
+++ b/1901-2000.md
@@ -83,3 +83,8 @@ for (int i = 0; i < m * 2; i += 2) {
 把`x`和`y`分开看，找规律
 # 1955. Count Number of Special Subsequences
 动态规划，考虑当前值可以组成的个数
+# 1957. Delete Characters to Make Fancy String
+模拟
+# 1958. Check if Move is Legal
+八个方向模拟
+#  
