--- a/1901-2000.md
+++ b/1901-2000.md
@@ -87,4 +87,15 @@ for (int i = 0; i < m * 2; i += 2) {
 模拟
 # 1958. Check if Move is Legal
 八个方向模拟
-#  
+# 1959. Minimum Total Space Wasted With K Resizing Operations
+`dp[i][k]`分`k`个区间，然后记忆化递归
+# 1960. Maximum Product of the Length of Two Palindromic Substrings
+`manacher`求半径，然后更新前后缀，可以`dp`更新或者双指针
+# 1961. Check If String Is a Prefix of Array
+遍历比较
+# 1962. Remove Stones to Minimize the Total
+优先队列
+# 1963. Minimum Number of Swaps to Make the String Balanced
+使用最右边的交换，实际操作中不需要真正的交换
+# 1964. Find the Longest Valid Obstacle Course at Each Position
+最长不下降子序列，更新时`upperBound`
