--- a/1901-2000.md
+++ b/1901-2000.md
@@ -99,3 +99,11 @@ for (int i = 0; i < m * 2; i += 2) {
 使用最右边的交换，实际操作中不需要真正的交换
 # 1964. Find the Longest Valid Obstacle Course at Each Position
 最长不下降子序列，更新时`upperBound`
+# 1967. Number of Strings That Appear as Substrings in Word
+遍历匹配
+# 1968. Array With Elements Not Equal to Average of Neighbors
+排序后，两两交换
+# 1969. Minimum Non-Zero Product of the Array Elements
+找规律，快速幂
+# 1970. Last Day Where You Can Still Cross
+二分位置，考虑是否连通
