--- a/1901-2000.md
+++ b/1901-2000.md
@@ -107,3 +107,19 @@ for (int i = 0; i < m * 2; i += 2) {
 找规律，快速幂
 # 1970. Last Day Where You Can Still Cross
 二分位置，考虑是否连通
+# 1971. Find if Path Exists in Graph
+并查集看是否联通
+# 1974. Minimum Time to Type Word Using Special Typewriter
+模拟
+# 1975. Maximum Matrix Sum
+偶数个数负可以完全变为正数，奇数会留一个，取最小的就可以
+# 1976. Number of Ways to Arrive at Destination
+最短路的时候记录方案
+# 1977. Number of Ways to Separate Numbers
+优化的`dp`转移，`lcp[i][j]`记录以`i`和`j`开头的最长公共前缀，这样比较某个长度的字符串可以`O(1)`比较
+# 1979. Find Greatest Common Divisor of Array
+模拟
+# 1980. Find Unique Binary String
+对角线异或即和每个数不同
+# 1981. Minimize the Difference Between Target and Chosen Elements
+背包`dp`
