--- a/1901-2000.md
+++ b/1901-2000.md
@@ -123,3 +123,5 @@ for (int i = 0; i < m * 2; i += 2) {
 对角线异或即和每个数不同
 # 1981. Minimize the Difference Between Target and Chosen Elements
 背包`dp`
+# 1982. Find Array Given Subset Sums
+根据最小值和次小值的差考虑该差的正负是否可以出现，通过该值去分割数组为两部分，递归下去
