--- a/1901-2000.md
+++ b/1901-2000.md
@@ -125,3 +125,11 @@ for (int i = 0; i < m * 2; i += 2) {
 背包`dp`
 # 1982. Find Array Given Subset Sums
 根据最小值和次小值的差考虑该差的正负是否可以出现，通过该值去分割数组为两部分，递归下去
+# 1984. Minimum Difference Between Highest and Lowest of K Scores
+排序后遍历
+# 1985. Find the Kth Largest Integer in the Array
+自定义排序
+# 1986. Minimum Number of Work Sessions to Finish the Tasks
+数位`dp`
+# 1987. Number of Unique Good Subsequences
+分别记录以`1`和`0`结尾的个数
