--- a/1901-2000.md
+++ b/1901-2000.md
@@ -133,3 +133,11 @@ for (int i = 0; i < m * 2; i += 2) {
 数位`dp`
 # 1987. Number of Unique Good Subsequences
 分别记录以`1`和`0`结尾的个数
+# 1991. Find the Middle Index in Array
+前缀和
+# 1992. Find All Groups of Farmland
+模拟
+# 1993. Operations on Tree
+建树搜索
+# 1994. The Number of Good Subsets
+找出每个数的构成，状压`dp`
