--- a/1901-2000.md
+++ b/1901-2000.md
@@ -141,3 +141,11 @@ for (int i = 0; i < m * 2; i += 2) {
 建树搜索
 # 1994. The Number of Good Subsets
 找出每个数的构成，状压`dp`
+# 1995. Count Special Quadruplets
+暴力模拟
+# 1996. The Number of Weak Characters in the Game
+按攻击力降序排列（相同按防御力升序），记录防御力最大值，只要前面有比它防御力高的，则该值是弱角色
+# 1997. First Day Where You Have Been in All the Rooms
+`dp[i]`表示第一次到达i时用的天数
+# 1998. GCD Sort of an Array
+按质因数并查集分组，分组内可以随意排序
