--- a/2001-3000.md
+++ b/2001-3000.md
@@ -4,3 +4,19 @@
 状态压缩，遍历两个可能的状态
 # 2003. Smallest Missing Genetic Value in Each Subtree
 启发式合并，将小的放到大的里面，类似并查集按秩合并。或者树链剖分，按重儿子轻儿子计算，重儿子不回溯
+# 2006. Count Number of Pairs With Absolute Difference K
+模拟
+# 2007. Find Original Array From Doubled Array
+排序后遍历数组，使用队列模拟
+# 2008. Maximum Earnings From Taxi
+按结束为止排序，`dp`找与`start`最靠近的前一个`end`
+# 2009. Minimum Number of Operations to Make Array Continuous
+去重后双指针
+# 2011. Final Value of Variable After Performing Operations
+模拟，找符号
+# 2012. Sum of Beauty in the Array
+记录前缀后缀的最值
+# 2013. Detect Squares
+对每个点，枚举对角线的情况
+# 2014. Longest Subsequence Repeated k Times
+`bfs`遍历所有情况检查是否合法
