--- a/1901-2000.md
+++ b/1901-2000.md
@@ -149,3 +149,5 @@ for (int i = 0; i < m * 2; i += 2) {
 `dp[i]`表示第一次到达i时用的天数
 # 1998. GCD Sort of an Array
 按质因数并查集分组，分组内可以随意排序
+# 2000. Reverse Prefix of Word
+模拟
