--- a/2001-3000.md
+++ b/2001-3000.md
@@ -20,3 +20,11 @@
 对每个点，枚举对角线的情况
 # 2014. Longest Subsequence Repeated k Times
 `bfs`遍历所有情况检查是否合法
+# 2016. Maximum Difference Between Increasing Elements
+遍历模拟，`O(n)`可以记录之前的最小值
+# 2017. Grid Game
+前缀和，枚举分界点
+# 2018. Check if Word Can Be Placed In Crossword
+考虑每两个`#`之间的字符串
+# 2019. The Score of Students Solving Math Expression
+区间`dp`，记忆化`dp`中的`set`
