--- a/2001-3000.md
+++ b/2001-3000.md
@@ -28,3 +28,21 @@
 考虑每两个`#`之间的字符串
 # 2019. The Score of Students Solving Math Expression
 区间`dp`，记忆化`dp`中的`set`
+# 2022. Convert 1D Array Into 2D Array
+模拟
+# 2023. Number of Pairs of Strings With Concatenation Equal to Target
+暴力枚举
+# 2024. Maximize the Confusion of an Exam
+双指针
+# 2025. Maximum Number of Ways to Partition an Array
+前缀和，哈希，动态维护`map`，注意`sum`要整除才行
+# 2027. Minimum Moves to Convert String
+模拟
+# 2028. Find Missing Observations
+向下求出平均后补余
+# 2029. Stone Game IX
+考虑第一次取`1`，不考虑`0`的情况下，`112121212`序列中添加足够多的零，看能形成的最长序列奇偶情况且判断是否还有剩余石子
+# 2030. Smallest K-Length Subsequence With Occurrences of a Letter
+按照常规单调栈方法构造，当`letter`数量不够时候不弹栈，最后去掉后长度超出部分，并且`letter`不够的时候从末尾开始替换
+
+也可以考虑每一位能否填某个值，此时需要预处理某个位置字母在后面第一次出现的位置和某个位置后`letter`出现的次数
