--- a/2001-3000.md
+++ b/2001-3000.md
@@ -46,3 +46,11 @@
 按照常规单调栈方法构造，当`letter`数量不够时候不弹栈，最后去掉后长度超出部分，并且`letter`不够的时候从末尾开始替换
 
 也可以考虑每一位能否填某个值，此时需要预处理某个位置字母在后面第一次出现的位置和某个位置后`letter`出现的次数
+# 2032. Two Out of Three
+模拟
+# 2033. Minimum Operations to Make a Uni-Value Grid
+取中位数
+# 2034. Stock Price Fluctuation 
+两个`treeMap`维护
+# 2035. Partition Array Into Two Arrays to Minimize Sum Difference
+折半搜索，适用于`n`较小又没那么小的情况
