--- a/2001-3000.md
+++ b/2001-3000.md
@@ -54,3 +54,19 @@
 两个`treeMap`维护
 # 2035. Partition Array Into Two Arrays to Minimize Sum Difference
 折半搜索，适用于`n`较小又没那么小的情况
+# 2037. Minimum Number of Moves to Seat Everyone
+排序后一一对应
+# 2038. Remove Colored Pieces if Both Neighbors are the Same Color
+比较每种超过长度`3`的连续段的个数
+# 2039. The Time When the Network Becomes Idle
+`bfs`求距离，考虑每个点需要的时间
+# 2040. Kth Smallest Product of Two Sorted Arrays
+分类讨论，二分查找最终的结果，遍历一个数组，双指针看有多少个满足小于`mid`
+# 2042. Check if Numbers Are Ascending in a Sentence
+模拟
+# 2043. Simple Bank System
+模拟
+# 2044. Count Number of Maximum Bitwise-OR Subsets
+枚举子集
+# 2045. Second Minimum Time to Reach Destination
+路径相等可以`bfs`求次短路
