--- a/2001-3000.md
+++ b/2001-3000.md
@@ -69,4 +69,4 @@
 # 2044. Count Number of Maximum Bitwise-OR Subsets
 枚举子集
 # 2045. Second Minimum Time to Reach Destination
-路径相等可以`bfs`求次短路
+路径相等可以`bfs`求次短路，开二维距离
