--- a/2001-3000.md
+++ b/2001-3000.md
@@ -70,3 +70,11 @@
 枚举子集
 # 2045. Second Minimum Time to Reach Destination
 路径相等可以`bfs`求次短路，开二维距离
+# 2047. Number of Valid Words in a Sentence
+模拟
+# 2048. Next Greater Numerically Balanced Number
+遍历判断
+# 2049. Count Nodes With the Highest Score
+树上`dfs`
+# 2050. Parallel Courses III
+拓扑排序`dp`
