--- a/2001-3000.md
+++ b/2001-3000.md
@@ -78,3 +78,19 @@
 树上`dfs`
 # 2050. Parallel Courses III
 拓扑排序`dp`
+# 2053. Kth Distinct String in an Array
+记录次数，模拟
+# 2054. Two Best Non-Overlapping Events
+按开始时间排序，优先队列维护已经访问过的点（未访问的开始时间在后面），每次弹出结束时间小于开始时间的点，弹出过程记录最大值
+# 2055. Plates Between Candles
+预处理区间中的蜡烛个数，每次找区间最靠近的两个蜡烛，减去蜡烛个数就是盘子个数
+# 2056. Number of Valid Move Combinations On Chessboard
+考虑每个方向及移动次数，即每个棋子的最终位置，从第`1s`开始判断是否会相撞
+# 2057. Smallest Index With Equal Value
+模拟
+# 2058. Find the Minimum and Maximum Number of Nodes Between Critical Points
+放在数组里求解
+# 2059. Minimum Operations to Convert Number
+`bfs`，超过范围的可以不用求解
+# 2060. Check if an Original String Exists Given Two Encoded Strings
+`dp`，记录某个位置，以及当前两个字符串表示个数的差值
