--- a/2001-3000.md
+++ b/2001-3000.md
@@ -94,3 +94,11 @@
 `bfs`，超过范围的可以不用求解
 # 2060. Check if an Original String Exists Given Two Encoded Strings
 `dp`，记录某个位置，以及当前两个字符串表示个数的差值
+# 2062. Count Vowel Substrings of a String
+暴力判断
+# 2063. Vowels of All Substrings
+考虑每一个元音字符可以对答案的贡献
+# 2064. Minimized Maximum of Products Distributed to Any Store
+二分答案
+# 2065. Maximum Path Quality of a Graph
+暴搜，只有在第一次进入的时候加上`value`，回溯为`0`次的时候减去
