--- a/2001-3000.md
+++ b/2001-3000.md
@@ -102,3 +102,11 @@
 二分答案
 # 2065. Maximum Path Quality of a Graph
 暴搜，只有在第一次进入的时候加上`value`，回溯为`0`次的时候减去
+# 2068. Check Whether Two Strings are Almost Equivalent
+遍历
+# 2069. Walking Robot Simulation II
+求出周长模拟，注意初始方向，当某次余数为`0`的时候，`(0,0)`点方向为`3`
+# 2070. Most Beautiful Item for Each Query
+排序后离线处理，记录遍历的最大值
+# 2071. Maximum Number of Tasks You Can Assign
+二分答案后贪心，选最小的`k`个任务和最大的`k`个工人，从大到小考虑任务，最大的工人可以完成最大的任务即让他完成，若不能则选吃药后最小的能完成的工人
