--- a/2001-3000.md
+++ b/2001-3000.md
@@ -110,3 +110,11 @@
 排序后离线处理，记录遍历的最大值
 # 2071. Maximum Number of Tasks You Can Assign
 二分答案后贪心，选最小的`k`个任务和最大的`k`个工人，从大到小考虑任务，最大的工人可以完成最大的任务即让他完成，若不能则选吃药后最小的能完成的工人
+# 2073. Time Needed to Buy Tickets
+`k`前面的人最多买`k`张票，`k`后面的人最多买`k-1`张票
+# 2074. Reverse Nodes in Even Length Groups
+模拟
+# 2075. Decode the Slanted Ciphertext
+斜着扫描恢复
+# 2076. Process Restricted Friend Requests
+并查集，每次合并考虑每个限制所在集合是否会有冲突
