--- a/2001-3000.md
+++ b/2001-3000.md
@@ -118,3 +118,11 @@
 斜着扫描恢复
 # 2076. Process Restricted Friend Requests
 并查集，每次合并考虑每个限制所在集合是否会有冲突
+# 2078. Two Furthest Houses With Different Colors
+有一端肯定在端点处
+# 2079. Watering Plants
+模拟
+# 2080. Range Frequency Queries
+记录下标，查找区间的位置，左边为第一个大于等于`left`的位置，右边为第一个大于`right`的位置
+# 2081. Sum of k-Mirror Numbers
+枚举`k`进制回文数，判断是否是十进制回文数
