--- a/2001-3000.md
+++ b/2001-3000.md
@@ -126,3 +126,21 @@
 记录下标，查找区间的位置，左边为第一个大于等于`left`的位置，右边为第一个大于`right`的位置
 # 2081. Sum of k-Mirror Numbers
 枚举`k`进制回文数，判断是否是十进制回文数
+# 2085. Count Common Words With One Occurrence
+统计次数
+# 2086. Minimum Number of Buckets Required to Collect Rainwater from Houses
+从左到右，贪心的放右边
+# 2087. Minimum Cost Homecoming of a Robot in a Grid
+径直走到终点，所需代价一定
+# 2088. Count Fertile Pyramids in a Land
+`dp`，当前点的高度有下一行的三个点最小距离决定
+# 2089. Find Target Indices After Sorting Array
+模拟
+# 2090. K Radius Subarray Averages
+前缀和或者`k`长度的滑动窗口
+# 2091. Removing Minimum and Maximum From Array
+找出最大最小的位置，然后贪心求解
+# 2092. Find All People With Secret
+每个相同时刻找出知道秘密的，可以用并查集（需要恢复现场）或者建图`bfs`、`dfs`
+
+也可以考虑最短路，表示知道秘密的最早时间，更新相邻节点的时间必须晚于堆弹出的当前时间
