--- a/2001-2100.md
+++ b/2001-2100.md
@@ -144,3 +144,11 @@
 每个相同时刻找出知道秘密的，可以用并查集（需要恢复现场）或者建图`bfs`、`dfs`
 
 也可以考虑最短路，表示知道秘密的最早时间，更新相邻节点的时间必须晚于堆弹出的当前时间
+# 2094. Finding 3-Digit Even Numbers
+暴力遍历
+# 2095. Delete the Middle Node of a Linked List
+快慢指针
+# 2096. Step-By-Step Directions From a Binary Tree Node to Another
+找到到每个点的路径，在去掉前缀拼接起来
+# 2097. Valid Arrangement of Pairs
+离散化后，欧拉回路
