--- a/2001-2100.md
+++ b/2001-2100.md
@@ -152,3 +152,7 @@
 找到到每个点的路径，在去掉前缀拼接起来
 # 2097. Valid Arrangement of Pairs
 离散化后，欧拉回路
+# 2099. Find Subsequence of Length K With the Largest Sum
+求出下标后排序
+# 2100. Find Good Days to Rob the Bank
+前后缀分解
