--- a/2101-2200.md
+++ b/2101-2200.md
@@ -12,3 +12,11 @@
 双指针模拟
 # 2106. Maximum Fruits Harvested After at Most K Steps
 前缀和，考虑左边和右边的端点位置
+# 2108. Find First Palindromic String in the Array
+遍历找第一个回文串
+# 2109. Adding Spaces to a String
+遍历字符串，记录`space`的位置
+# 2110. Number of Smooth Descent Periods of a Stock
+记录以当前字符为结尾的有多少个，从前一个转移过来
+# 2111. Minimum Operations to Make the Array K-Increasing
+对每个`k`个间隔分组，总长度减去每个`lis`
