--- a/2101-2200.md
+++ b/2101-2200.md
@@ -20,3 +20,21 @@
 记录以当前字符为结尾的有多少个，从前一个转移过来
 # 2111. Minimum Operations to Make the Array K-Increasing
 对每个`k`个间隔分组，总长度减去每个`lis`
+# 2115. Maximum Number of Words Found in Sentences
+模拟
+# 2116. Find All Possible Recipes from Given Supplies
+一直判断直到某一次没有新的加入，或者拓扑排序
+# 2117. Check if a Parentheses String Can Be Valid
+正反两次检查，一种括号不能比另一种括号加上可变字符的个数还多
+
+或者两个栈记录左括号和可变字符，优先使用左括号匹配右括号，最后看右括号的位置是否比剩余左括号的大
+# 2118. Abbreviating the Product of a Range
+分成不同子问题求解，注意精度问题
+# 2119. A Number After a Double Reversal
+除零外，最后一位不能为零
+# 2120. Execution of All Suffix Instructions Staying in a Grid
+模拟
+# 2121. Intervals Between Identical Elements
+记录每个元素的位置，找公式求求解
+# 2122. Recover the Original Array
+遍历第一个`higher[0]`，考虑k的值，然后双指针判断是否成立
