--- a/2101-2200.md
+++ b/2101-2200.md
@@ -20,15 +20,15 @@
 记录以当前字符为结尾的有多少个，从前一个转移过来
 # 2111. Minimum Operations to Make the Array K-Increasing
 对每个`k`个间隔分组，总长度减去每个`lis`
-# 2115. Maximum Number of Words Found in Sentences
+# 2114. Maximum Number of Words Found in Sentences
 模拟
-# 2116. Find All Possible Recipes from Given Supplies
+# 2115. Find All Possible Recipes from Given Supplies
 一直判断直到某一次没有新的加入，或者拓扑排序
-# 2117. Check if a Parentheses String Can Be Valid
+# 2116. Check if a Parentheses String Can Be Valid
 正反两次检查，一种括号不能比另一种括号加上可变字符的个数还多
 
 或者两个栈记录左括号和可变字符，优先使用左括号匹配右括号，最后看右括号的位置是否比剩余左括号的大
-# 2118. Abbreviating the Product of a Range
+# 2117. Abbreviating the Product of a Range
 分成不同子问题求解，注意精度问题
 # 2119. A Number After a Double Reversal
 除零外，最后一位不能为零
@@ -38,3 +38,11 @@
 记录每个元素的位置，找公式求求解
 # 2122. Recover the Original Array
 遍历第一个`higher[0]`，考虑k的值，然后双指针判断是否成立
+# 2124. Check if All A's Appears Before All B's
+检查是否有`ba`
+# 2125. Number of Laser Beams in a Bank
+将每个相邻的`1`的个数乘起来
+# 2126. Destroying Asteroids
+贪心的按小到大放
+# 2127. Maximum Employees to Be Invited to a Meeting
+基环树，考虑环的大小，`2`的环可以带两端的长链，`3`及以上的环只能取环的大小，具体求的时候可以采用拓扑排序的思路
