--- a/2101-2200.md
+++ b/2101-2200.md
@@ -46,3 +46,19 @@
 贪心的按小到大放
 # 2127. Maximum Employees to Be Invited to a Meeting
 基环树，考虑环的大小，`2`的环可以带两端的长链，`3`及以上的环只能取环的大小，具体求的时候可以采用拓扑排序的思路
+# 2129. Capitalize the Title
+模拟
+# 2130. Maximum Twin Sum of a Linked List
+放到数组中
+# 2131. Longest Palindrome by Concatenating Two Letter Words
+遍历字符的可能性，分类讨论
+# 2132. Stamping the Grid
+二维差分，二维前缀和
+# 2133. Check if Every Row and Column Contains All Numbers
+模拟
+# 2134. Minimum Swaps to Group All 1's Together II
+滑动窗口统计`0`的个数
+# 2135. Count Words Obtained After Adding a Letter
+依次判断去掉一个字母后是否出现过
+# 2136. Earliest Possible Day of Full Bloom
+贪心，优先种生长最耗时的。可以二分，考虑每个植物的种植最晚时间，先种先到`deadline`的，看是否能满足
