--- a/2101-2200.md
+++ b/2101-2200.md
@@ -62,3 +62,11 @@
 依次判断去掉一个字母后是否出现过
 # 2136. Earliest Possible Day of Full Bloom
 贪心，优先种生长最耗时的。可以二分，考虑每个植物的种植最晚时间，先种先到`deadline`的，看是否能满足
+# 2138. Divide a String Into Groups of Size k
+模拟
+# 2139. Minimum Moves to Reach Target Score
+从后往前操作，能用除就用除
+# 2140. Solving Questions With Brainpower
+`dp`考虑做和不做的情况
+# 2141. Maximum Running Time of N Computers
+二分答案，考虑长方形的区域，每行不能有重复的电池，按列放下来，大于`mid`的可以放一列，小于`mid`的需要其他（同样小于`mid`）的来补
