--- a/2101-2200.md
+++ b/2101-2200.md
@@ -70,3 +70,19 @@
 `dp`考虑做和不做的情况
 # 2141. Maximum Running Time of N Computers
 二分答案，考虑长方形的区域，每行不能有重复的电池，按列放下来，大于`mid`的可以放一列，小于`mid`的需要其他（同样小于`mid`）的来补
+# 2144. Minimum Cost of Buying Candies With Discount
+从大到小，每隔两个去掉一个
+# 2145. Count the Hidden Sequences
+差分，考虑每个值的区间
+# 2146. K Highest Ranked Items Within a Price Range
+`bfs`排序
+# 2147. Number of Ways to Divide a Long Corridor
+每两个模拟
+# 2148. Count Elements With Strictly Smaller and Greater Elements 
+去掉最大值和最小值
+# 2149. Rearrange Array Elements by Sign
+正负分开，然后模拟
+# 2150. Find All Lonely Numbers in the Array
+模拟
+# 2151. Maximum Good People Based on Statements
+二进制枚举好人然后判断
