--- a/2101-2200.md
+++ b/2101-2200.md
@@ -86,3 +86,17 @@
 模拟
 # 2151. Maximum Good People Based on Statements
 二进制枚举好人然后判断
+# 2160. Minimum Sum of Four Digit Number After Splitting Digits
+各分两位，小的在十位
+# 2161. Partition Array According to Given Pivot
+模拟，小的放前面大的放后面
+# 2162. Minimum Cost to Set Cooking Time
+至多两种情况可以，分别讨论
+# 2163. Minimum Difference in Sums After Removal of Elements
+堆记录前缀最小和和后缀最大和
+# 2164. Sort Even and Odd Indices Independently
+分别取出来排序
+# 2165. Smallest Value of the Rearranged Number
+分正负讨论
+# 2166. Design Bitset
+可以懒标记`filp`，或者两个`set`，每次`flip`交换`set`
