--- a/2101-2200.md
+++ b/2101-2200.md
@@ -86,6 +86,14 @@
 模拟
 # 2151. Maximum Good People Based on Statements
 二进制枚举好人然后判断
+# 2154. Keep Multiplying Found Values by Two
+判断模拟
+# 2155. All Divisions With the Highest Score of a Binary Array
+前缀和
+# 2156. Find Substring With Given Hash Value
+逆向求字符串`hash`
+# 2157. Groups of Strings
+按长度排序，只考虑替换和减去的操作，记录每个字符串可能边的值，并查集维护连通性
 # 2160. Minimum Sum of Four Digit Number After Splitting Digits
 各分两位，小的在十位
 # 2161. Partition Array According to Given Pivot
@@ -100,3 +108,5 @@
 分正负讨论
 # 2166. Design Bitset
 可以懒标记`filp`，或者两个`set`，每次`flip`交换`set`
+# 2167. Minimum Time to Remove All Cars Containing Illegal Goods
+前后缀`dp`
