--- a/2101-2200.md
+++ b/2101-2200.md
@@ -110,3 +110,11 @@
 可以懒标记`filp`，或者两个`set`，每次`flip`交换`set`
 # 2167. Minimum Time to Remove All Cars Containing Illegal Goods
 前后缀`dp`
+# 2169. Count Operations to Obtain Zero
+模拟
+# 2170. Minimum Operations to Make the Array Alternating
+考虑奇数位和偶数位最大、次大出现次数
+# 2171. Removing Minimum Number of Magic Beans
+排序，枚举最终非空袋子中魔法豆的数目
+# 2172. Maximum AND Sum of Array
+状态压缩或者费用流
