--- a/2101-2200.md
+++ b/2101-2200.md
@@ -118,3 +118,19 @@
 排序，枚举最终非空袋子中魔法豆的数目
 # 2172. Maximum AND Sum of Array
 状态压缩或者费用流
+# 2176. Count Equal and Divisible Pairs in an Array
+模拟
+# 2177. Find Three Consecutive Integers That Sum to a Given Number
+除`3`模拟
+# 2178. Maximum Split of Positive Even Integers
+按偶数从小到大模拟
+# 2179. Count Good Triplets in an Array
+转换顺序之后，树状数组维护两边的个数
+# 2180. Count Integers With Even Digit Sum
+模拟
+# 2181. Merge Nodes in Between Zeros
+链表模拟
+# 2182. Construct String With Repeat Limit
+记录`cnt`，从大到小枚举，插孔补一个次小值
+# 2183. Count Array Pairs Divisible by K
+预处理每个数的倍数有多少个，查询时候直接查还需要提供的数
