--- a/2101-2200.md
+++ b/2101-2200.md
@@ -134,3 +134,11 @@
 记录`cnt`，从大到小枚举，插孔补一个次小值
 # 2183. Count Array Pairs Divisible by K
 预处理每个数的倍数有多少个，查询时候直接查还需要提供的数
+# 2185. Counting Words With a Given Prefix
+模拟
+# 2186. Minimum Number of Steps to Make Two Strings Anagram II
+累加各个字母出现次数的差值
+# 2187. Minimum Time to Complete Trips
+二分答案，注意边界
+# 2188. Minimum Time to Finish the Race
+一直用一个轮胎不会太多，先求出只用某个轮胎跑`n`圈的最小值，然后`dp`
