--- a/2101-2200.md
+++ b/2101-2200.md
@@ -142,3 +142,19 @@
 二分答案，注意边界
 # 2188. Minimum Time to Finish the Race
 一直用一个轮胎不会太多，先求出只用某个轮胎跑`n`圈的最小值，然后`dp`
+# 2190. Most Frequent Number Following Key In an Array
+模拟
+# 2191. Sort the Jumbled Numbers
+构建比较函数
+# 2192. All Ancestors of a Node in a Directed Acyclic Graph
+拓扑排序，把前一个的值加入到当前`set`中
+# 2193. Minimum Number of Moves to Make Palindrome
+按前一半的顺序贪心处理，对奇数可以和后面的交换继续处理
+# 2194. Cells in a Range on an Excel Sheet
+模拟
+# 2195. Append K Integers With Minimal Sum
+排序去重，追加前`k`个数，若出现在前`k`个里，就往后移动一个
+# 2196. Create Binary Tree From Descriptions
+`hash`存树的节点，构造
+# 2197. Replace Non-Coprime Numbers in Array
+栈模拟
