--- a/2201-2300.md
+++ b/2201-2300.md
@@ -4,3 +4,11 @@
 分类讨论
 # 2203. Minimum Weighted Subgraph With the Required Paths
 记录三个点到其他点的距离，遍历每个点考虑其为中间点的距离
+# 2206. Divide Array Into Equal Pairs
+考虑每个数是否是偶数
+# 2207. Maximize Number of Subsequences in a String
+第一个元素一定是加到开头，最后一个一定是加到末尾
+# 2208. Minimum Operations to Halve Array Sum
+堆模拟
+# 2209. Minimum White Tiles After Covering With Carpets
+考虑对位置`i`，不覆盖和覆盖`dp[i][j] = min(dp[i-1][j], dp[i-cLen][j-1])`
