--- a/2201-2300.md
+++ b/2201-2300.md
@@ -12,3 +12,11 @@
 堆模拟
 # 2209. Minimum White Tiles After Covering With Carpets
 考虑对位置`i`，不覆盖和覆盖`dp[i][j] = min(dp[i-1][j], dp[i-cLen][j-1])`
+# 2210. Count Hills and Valleys in an Array
+遍历模拟
+# 2211. Count Collisions on a Road
+去掉开头和结尾不会被撞的，其余都会停下来
+# 2212. Maximum Points in an Archery Competition
+二进制某个状态是否可行，记录最大得分
+# 2213. Longest Substring of One Repeating Character
+线段树维护单点修改区间查询的情况
