--- a/2201-2300.md
+++ b/2201-2300.md
@@ -19,4 +19,4 @@
 # 2212. Maximum Points in an Archery Competition
 二进制某个状态是否可行，记录最大得分
 # 2213. Longest Substring of One Repeating Character
-线段树维护单点修改区间查询的情况
+线段树维护单点修改区间查询的情况，也可以模拟维护区间的情况
