--- a/2201-2300.md
+++ b/2201-2300.md
@@ -20,3 +20,11 @@
 二进制某个状态是否可行，记录最大得分
 # 2213. Longest Substring of One Repeating Character
 线段树维护单点修改区间查询的情况，也可以模拟维护区间的情况
+# 2215. Find the Difference of Two Arrays
+模拟
+# 2216. Minimum Deletions to Make Array Beautiful
+从前往后模拟，贪心的删除
+# 2217. Find Palindrome With Fixed Length
+枚举前半部分，后面的翻转即可
+# 2218. Maximum Value of K Coins From Piles
+分组背包`dp`，每个背包只能选至多一个的前`m`个数
