--- a/2201-2300.md
+++ b/2201-2300.md
@@ -28,3 +28,15 @@
 枚举前半部分，后面的翻转即可
 # 2218. Maximum Value of K Coins From Piles
 分组背包`dp`，每个背包只能选至多一个的前`m`个数
+# 2220. Minimum Bit Flips to Convert Numbe
+异或后`1`的个数
+# 2221. Find Triangular Sum of an Array
+模拟
+# 2222. Number of Ways to Select Buildings
+考虑结果的串每个值出现时，前面有多少个子串已经出现
+
+也可以遍历考虑中间位置的`1`或`0`，考虑两边有多少个
+# 2223. Sum of Scores of Built Strings
+扩展`kmp`，或者`hash`二分
+
+
