--- a/2201-2300.md
+++ b/2201-2300.md
@@ -38,5 +38,13 @@
 也可以遍历考虑中间位置的`1`或`0`，考虑两边有多少个
 # 2223. Sum of Scores of Built Strings
 扩展`kmp`，或者`hash`二分
+# 2224. Minimum Number of Operations to Convert Time
+从大往小贪心
+# 2225. Find Players With Zero or One Losses
+`hash`模拟
+# 2226. Maximum Candies Allocated to K Children
+二分答案
+# 2227. Encrypt and Decrypt Strings
+逆向思维，先解析字典中的值
 
 
