--- a/2201-2300.md
+++ b/2201-2300.md
@@ -46,5 +46,33 @@
 二分答案
 # 2227. Encrypt and Decrypt Strings
 逆向思维，先解析字典中的值
-
+# 2231. Largest Number After Digit Swaps by Parity
+按奇偶位置冒泡排序
+# 2232. Minimize Result by Adding Parentheses to Expression
+枚举左右两边括号的位置
+# 2233. Maximum Product After K Increments
+每次给最小的加一
+# 2234. Maximum Total Beauty of the Gardens
+贪心枚举完善花园个数，考虑剩下的最小值的最大数，可以双指针或者二分（到的位置）
+# 2235. Add Two Integers
+模拟
+# 2236. Root Equals Sum of Children
+模拟
+# 2239. Find Closest Number to Zero
+遍历模拟
+# 2240. Number of Ways to Buy Pens and Pencils
+遍历枚举
+# 2241. Design an ATM Machine
+模拟
+# 2242. Maximum Score of a Node Sequence
+枚举中间边
+# 2243. Calculate Digit Sum of a String
+分块模拟
+# 2244. Minimum Rounds to Complete All Tasks
+贪心讨论
+# 2245. Maximum Trailing Zeros in a Cornered Path
+考虑`2`和`5`的个数，前缀和处理四个方向
+# 2246. Longest Path With Different Adjacent Characters
+对每个点考虑最长的两个路径
+ 
 
