--- a/2201-2300.md
+++ b/2201-2300.md
@@ -74,5 +74,13 @@
 考虑`2`和`5`的个数，前缀和处理四个方向
 # 2246. Longest Path With Different Adjacent Characters
 对每个点考虑最长的两个路径
- 
+# 2248. Intersection of Multiple Arrays
+看每个数是否出现了`n`次
+# 2249. Count Lattice Points Inside a Circle
+考虑每个点是否可能在圆内
+# 2250. Count Number of Rectangles Containing Each Point
+二维偏序，考虑按`x`排序每个点，然后树状数组维护`y`  
+# 2251. Number of Flowers in Full Bloom
+离散化差分，或者放到`list`里面，遍历的时候统计前缀和
+
 
