--- a/2201-2300.md
+++ b/2201-2300.md
@@ -82,5 +82,21 @@
 二维偏序，考虑按`x`排序每个点，然后树状数组维护`y`  
 # 2251. Number of Flowers in Full Bloom
 离散化差分，或者放到`list`里面，遍历的时候统计前缀和
+# 2255. Count Prefixes of a Given String
+模拟
+# 2256. Minimum Average Difference
+前后缀模拟
+# 2257. Count Unguarded Cells in the Grid
+从每个守卫看出去，每个格子最多被四个守卫遍历到
+# 2258. Escape the Spreading Fire
+二分答案，考虑一个走一步的情况，人走的用`vis`标记，火走的标记为火
+# 2259. Remove Digit From Number to Maximize Result
+遍历删除比较
+# 2260. Minimum Consecutive Cards to Pick Up
+遍历记录左边一个的位置
+# 2261. K Divisible Elements Subarrays
+`set`去重
+# 2262. Total Appeal of A String
+动态规划，在前一字符基础上考虑加一个字符后对答案的贡献
 
 
