--- a/2201-2300.md
+++ b/2201-2300.md
@@ -98,5 +98,13 @@
 `set`去重
 # 2262. Total Appeal of A String
 动态规划，在前一字符基础上考虑加一个字符后对答案的贡献
+# 2264. Largest 3-Same-Digit Number in String
+模拟比较
+# 2265. Count Nodes Equal to Average of Subtree
+同时统计并返回和、个数两个值
+# 2266. Count Number of Texts
+动态规划，`f[i]=f[i−1]+f[i−2]+f[i−3]`
+# 2267.  Check if There Is a Valid Parentheses String Path
+记忆化递归，前缀和必须`>=0`且终点为`0`
 
 
