--- a/2201-2300.md
+++ b/2201-2300.md
@@ -106,5 +106,23 @@
 动态规划，`f[i]=f[i−1]+f[i−2]+f[i−3]`
 # 2267.  Check if There Is a Valid Parentheses String Path
 记忆化递归，前缀和必须`>=0`且终点为`0`
+# 2269. Find the K-Beauty of a Number
+模拟
+# 2270. Number of Ways to Split Array
+求出所有的和，再遍历模拟
+# 2271. Maximum White Tiles Covered by a Carpet
+双指针
+# 2272. Substring With Largest Variance
+枚举最大最小字符，考虑前缀和
+# 2273. Find Resultant Array After Removing Anagrams
+类似栈模拟
+# 2274. Maximum Consecutive Floors Without Special Floors
+排序后比较间隔
+# 2275. Largest Combination With Bitwise AND Greater Than Zero
+位运算，比较每一位
+# 2276. Count Integers in Intervals
+`treemap`模拟，因为每个区间最多进和出一次，因此复杂度可以接受
+
+
 
 
