--- a/2201-2300.md
+++ b/2201-2300.md
@@ -122,6 +122,14 @@
 位运算，比较每一位
 # 2276. Count Integers in Intervals
 `treemap`模拟，因为每个区间最多进和出一次，因此复杂度可以接受
+# 2278. Percentage of Letter in String
+统计模拟
+# 2279. Maximum Bags With Full Capacity of Rocks
+排序后，贪心取
+# 2280. Minimum Lines to Represent a Line Chart
+乘法算斜率
+# 2281. Sum of Total Strength of Wizards
+计算贡献，推公式，前缀和的前缀和优化计算
 
 
 
