--- a/2201-2300.md
+++ b/2201-2300.md
@@ -130,6 +130,22 @@
 乘法算斜率
 # 2281. Sum of Total Strength of Wizards
 计算贡献，推公式，前缀和的前缀和优化计算
+# 2283. Check if Number Has Equal Digit Count and Digit Value
+模拟
+# 2284. Sender With Largest Word Count
+统计次数后排序
+# 2285. Maximum Total Importance of Roads
+按度数分配
+# 2286. Booking Concert Tickets in Groups
+线段树维护每一行还剩多少个可以放
+# 2287. Rearrange Characters to Make Target String
+木桶原理看字母最小的出现次数
+# 2288. Apply Discount to Prices
+模拟
+# 2289. Steps to Make Array Non-decreasing
+单调栈或链表模拟
+# 2290. Minimum Obstacle Removal to Reach Corner
+`01bfs`
 
 
 
