--- a/2201-2300.md
+++ b/2201-2300.md
@@ -146,6 +146,15 @@
 单调栈或链表模拟
 # 2290. Minimum Obstacle Removal to Reach Corner
 `01bfs`
+# 2293. Min Max Game
+模拟
+# 2294. Partition Array Such That Maximum Difference Is K
+排序找`k`范围的区间
+# 2295. Replace Elements in an Array
+倒叙枚举，记录某个值的最终状态
+# 2296. Design a Text Editor
+对顶栈
+
 
 
 
