--- a/2201-2300.md
+++ b/2201-2300.md
@@ -154,7 +154,10 @@
 倒叙枚举，记录某个值的最终状态
 # 2296. Design a Text Editor
 对顶栈
-
+# 2299. Strong Password Checker II
+模拟
+# 2300. Successful Pairs of Spells and Potion
+排序或者二分
 
 
 
