--- a/2301-2400.md
+++ b/2301-2400.md
@@ -10,5 +10,12 @@
 `dfs`枚举，或者状压`dp`
 # 2306. Naming a Company
 保存从字符串的首字母从`i`变到`j`之后，有多少个满足条件的单词（单向）
-
+# 2309. Greatest English Letter in Upper and Lower Case
+模拟
+# 2310. Sum of Numbers With Units Digit K
+各位能解决，高位不超过就可以随意
+# 2311. Longest Binary Subsequence Less Than or Equal to K
+贪心，从后往前，`0`直接加入，如果是`1`考虑加了是否比`k`大
+# 2312. Selling Pieces of Wood
+枚举切割位置`dp`
 
