--- a/2301-2400.md
+++ b/2301-2400.md
@@ -18,4 +18,19 @@
 贪心，从后往前，`0`直接加入，如果是`1`考虑加了是否比`k`大
 # 2312. Selling Pieces of Wood
 枚举切割位置`dp`
-
+# 2315. Count Asterisks
+分奇偶模拟
+# 2316. Count Unreachable Pairs of Nodes in an Undirected Graph
+统计联通块大小
+# 2317. Maximum XOR After Operations 
+每个位置分析是否能`1`，最后可直接或起来
+# 2318. Number of Distinct Roll Sequences
+记录前两个位置`dp`
+# 2319. Check if Matrix Is X-Matrix
+判断对角线元素
+# 2320. Count Number of Ways to Place Houses
+考虑一边递推
+# 2321. Maximum Score Of Spliced Array
+前缀和，转换为最大子数组
+# 2322. Minimum Score After Removals on a Tree
+两个`dfs`枚举两条边
