--- a/2301-2400.md
+++ b/2301-2400.md
@@ -34,3 +34,12 @@
 前缀和，转换为最大子数组
 # 2322. Minimum Score After Removals on a Tree
 两个`dfs`枚举两条边
+# 2325. Decode the Message
+模拟
+# 2326. Spiral Matrix IV
+模拟方向，考虑某一步是否能到达，不能则旋转方向向前
+# 2327. Number of People Aware of a Secret
+考虑某一天对未来新增的人数
+# 2328. Number of Increasing Paths in a Grid
+记忆化递归，类似滑雪
+
