--- a/2301-2400.md
+++ b/2301-2400.md
@@ -33,13 +33,55 @@
 # 2321. Maximum Score Of Spliced Array
 前缀和，转换为最大子数组
 # 2322. Minimum Score After Removals on a Tree
+
 两个`dfs`枚举两条边
+
 # 2325. Decode the Message
+
 模拟
+
 # 2326. Spiral Matrix IV
+
 模拟方向，考虑某一步是否能到达，不能则旋转方向向前
+
 # 2327. Number of People Aware of a Secret
+
 考虑某一天对未来新增的人数
+
 # 2328. Number of Increasing Paths in a Grid
+
 记忆化递归，类似滑雪
+
+# 2331. Evaluate Boolean Binary Tree
+
+递归模拟
+
+# 2332. The Latest Time to Catch a Bus
+
+模拟上车过程，从最后能上车的人往前找没出现的
+
+# 2333. Minimum Sum of Squared Difference
+
+优先减去最大的，能减到的位置可以二分
+
+# 2334. Subarray With Elements Greater Than Varying Threshold
+
+单调栈维护某个值作为最小值时的最远距离，考虑该距离是否能满足
+
+# 2335. Minimum Amount of Time to Fill Cups
+
+贪心分类
+
+# 2336. Smallest Number in Infinite Set
+
+`treeset`模拟
+
+# 2337. Move Pieces to Obtain a String
+
+去掉`_`后字符串应该相等，另外考虑两个字符串中每个字符的位置关系
+
+# 2338. Count the Number of Ideal Arrays
+
+存在相同的数字复杂度不满足，可以考虑如果数字完全不同的情况下的构成，用组合数再求该种构成有多少种
+
 
