--- a/2301-2400.md
+++ b/2301-2400.md
@@ -1,37 +1,71 @@
 # 2301. Match Substring After Replacement
+
 遍历模拟
+
 # 2302. Count Subarrays With Score Less Than K
+
 双指针
+
 # 2303. Calculate Amount Paid in Taxes
+
 模拟
+
 # 2304. Minimum Path Cost in a Grid
+
 `dp`每一行的值
+
 # 2305. Fair Distribution of Cookies
+
 `dfs`枚举，或者状压`dp`
+
 # 2306. Naming a Company
+
 保存从字符串的首字母从`i`变到`j`之后，有多少个满足条件的单词（单向）
+
 # 2309. Greatest English Letter in Upper and Lower Case
+
 模拟
+
 # 2310. Sum of Numbers With Units Digit K
+
 各位能解决，高位不超过就可以随意
+
 # 2311. Longest Binary Subsequence Less Than or Equal to K
+
 贪心，从后往前，`0`直接加入，如果是`1`考虑加了是否比`k`大
+
 # 2312. Selling Pieces of Wood
+
 枚举切割位置`dp`
+
 # 2315. Count Asterisks
+
 分奇偶模拟
+
 # 2316. Count Unreachable Pairs of Nodes in an Undirected Graph
+
 统计联通块大小
-# 2317. Maximum XOR After Operations 
+
+# 2317. Maximum XOR After Operations
+
 每个位置分析是否能`1`，最后可直接或起来
+
 # 2318. Number of Distinct Roll Sequences
+
 记录前两个位置`dp`
+
 # 2319. Check if Matrix Is X-Matrix
+
 判断对角线元素
+
 # 2320. Count Number of Ways to Place Houses
+
 考虑一边递推
+
 # 2321. Maximum Score Of Spliced Array
+
 前缀和，转换为最大子数组
+
 # 2322. Minimum Score After Removals on a Tree
 
 两个`dfs`枚举两条边
@@ -84,4 +118,19 @@
 
 存在相同的数字复杂度不满足，可以考虑如果数字完全不同的情况下的构成，用组合数再求该种构成有多少种
 
+# 2341. Maximum Number of Pairs in Array
+
+计数，模拟
+
+# 2342. Max Sum of a Pair With Equal Sum of Digits
+
+提取数字后模拟
+
+# 2343. Query Kth Smallest Trimmed Number
+
+排序模拟
+
+# 2344. Minimum Deletions to Make Array Divisible
+
+求最大公约数后，扫描一遍最小值
 
