--- a/2301-2400.md
+++ b/2301-2400.md
@@ -135,19 +135,49 @@
 求最大公约数后，扫描一遍最小值
 
 # 2347. Best Poker Hand
+
 模拟
+
 # 2348. Number of Zero-Filled Subarrays
+
 考虑每个以`0`结尾的子数组的个数
+
 # 2349. Design a Number Container System
+
 `map`模拟
+
 # 2350. Shortest Impossible Sequence of Rolls
+
 找一段一段的出现个数
+
 # 2351. First Letter to Appear Twice
+
 模拟
+
 # 2352. Equal Row and Column Pairs
+
 模拟
+
 # 2353. Design a Food Rating System
+
 多映射模拟
+
 # 2354. Number of Excellent Pairs
+
 转换为统计某个数中`1`的个数
 
+# 2357. Make Array Zero by Subtracting Equal Amounts
+
+求不同元素个数
+
+# 2358. Maximum Number of Groups Entering a Competition
+
+排序后按个数分组
+
+# 2359. Find Closest Node to Given Two Nodes
+
+求两个点到每个点的距离
+
+# 2360. Longest Cycle in a Graph
+
+基环树找环，可以拓扑排序去掉环外的点，或者记录每次开始的时间戳，看以后的每个访问大于开始的时间戳
