--- a/2301-2400.md
+++ b/2301-2400.md
@@ -181,3 +181,35 @@
 # 2360. Longest Cycle in a Graph
 
 基环树找环，可以拓扑排序去掉环外的点，或者记录每次开始的时间戳，看以后的每个访问大于开始的时间戳
+
+# 2363. Merge Similar Items
+
+模拟
+
+# 2364. Count Number of Bad Pairs
+
+`i`和`j`移位
+
+# 2365. Task Scheduler II
+
+模拟
+
+# 2366. Minimum Replacements to Sort the Array
+
+显然最后一个元素不会再分解，从后往前考虑能取得最大值
+
+# 2367. Number of Arithmetic Triplets
+
+模拟
+
+# 2368. Reachable Nodes With Restrictions
+
+建树后遍历
+
+# 2369. Check if There is a Valid Partition For The Array
+
+划分，子问题，线性`dp`
+
+# 2370. Longest Ideal Subsequence
+
+到某个位置，以某个字符结尾得情况下的最大值
