--- a/2301-2400.md
+++ b/2301-2400.md
@@ -213,3 +213,19 @@
 # 2370. Longest Ideal Subsequence
 
 到某个位置，以某个字符结尾得情况下的最大值
+
+# 2373. Largest Local Values in a Matrix
+
+模拟
+
+# 2374. Node With Highest Edge Score
+
+模拟
+
+# 2375. Construct Smallest Number From DI String
+
+`dfs`模拟，或者贪心把`D`的一段反转，可以考虑用栈实现
+
+# 2376. Count Special Integers
+
+数位`dp`
