--- a/2301-2400.md
+++ b/2301-2400.md
@@ -229,3 +229,20 @@
 # 2376. Count Special Integers
 
 数位`dp`
+
+# 2379. Minimum Recolors to Get K Consecutive Black Blocks
+
+滑动窗口
+
+# 2380. Time Needed to Rearrange a Binary String
+
+一次交互看成一次移动，可以递推
+
+# 2381. Shifting Letters II
+
+差分數組
+
+# 2382. Maximum Segment Sum After Removals
+
+逆向操作，可以用`treeset`或并查集维护
+
