--- a/2301-2400.md
+++ b/2301-2400.md
@@ -246,3 +246,11 @@
 
 逆向操作，可以用`treeset`或并查集维护
 
+# 2383. Minimum Hours of Training to Win a Competition
+模拟
+# 2384. Largest Palindromic Number
+记录次数，从大到小模拟
+# 2385. Amount of Time for Binary Tree to Be Infected
+`dfs`，或者建树`bfs`
+# 2386. Find the K-Sum of an Array
+类似多路归并的思路 
