--- a/2301-2400.md
+++ b/2301-2400.md
@@ -254,3 +254,11 @@
 `dfs`，或者建树`bfs`
 # 2386. Find the K-Sum of an Array
 类似多路归并的思路 
+# 2389. Longest Subsequence With Limited Sum
+排序，前缀和
+# 2390. Removing Stars From a String
+栈模拟
+# 2391. Minimum Amount of Time to Collect Garbage
+记录每个字母出现的最后一个位置和出现次数
+# 2392. Build a Matrix With Conditions
+行和列分别拓扑排序确定某个值的编号
