--- a/2301-2400.md
+++ b/2301-2400.md
@@ -262,3 +262,15 @@
 记录每个字母出现的最后一个位置和出现次数
 # 2392. Build a Matrix With Conditions
 行和列分别拓扑排序确定某个值的编号
+# 2395. Find Subarrays With Equal Sum
+模拟
+# 2396. Strictly Palindromic Number
+容易发现在`n-2`进制下，始终不是回文
+# 2397. Maximum Rows Covered by Columns
+二进制枚举选那些列，再判断
+# 2398. Maximum Number of Robots Within Budget
+双指针，单调队列维护区间最大值
+# 2399. Check Distances Between Same Letters
+模拟
+# 2400. Number of Ways to Reach a Position After Exactly k Steps
+数学结合组合数，考虑有多少步向一个方向走的情况，或者直接`dp`
