--- a/2401-2500.md
+++ b/2401-2500.md
@@ -1,5 +1,23 @@
 # 2401. Longest Nice Subarray
+
 滑动窗口
+
 # 2402. Meeting Rooms III
+
 双堆模拟
 
+# 2404. Most Frequent Even Element
+
+计数模拟
+
+# 2405. Optimal Partition of String
+
+遍历贪心看是否有一个之前出现过
+
+# 2406. Divide Intervals Into Minimum Number of Groups
+
+堆记录每组的右端点，新的一个区间可以放在任意一个小于开始位置的组里，直接选最小的维护即可
+
+# 2407. Longest Increasing Subsequence II
+
+线段树记录区间最大值，优化`dp`过程
