--- a/2401-2500.md
+++ b/2401-2500.md
@@ -21,3 +21,35 @@
 # 2407. Longest Increasing Subsequence II
 
 线段树记录区间最大值，优化`dp`过程
+
+# 2409. Count Days Spent Together
+
+计算区间，累加模拟
+
+# 2410. Maximum Matching of Players With Trainers
+
+排序，双指针遍历
+
+# 2411. Smallest Subarrays With Maximum Bitwise OR
+
+从后往前，记录每位`1`的出现位置
+
+# 2412. Minimum Money Required Before Transactions
+
+分别考虑亏和赚的，亏的中最后留下的钱为最大值，赚钱中要此时需满足大于花费最大值
+
+# 2413. Smallest Even Multiple
+
+分奇偶讨论
+
+# 2414. Length of the Longest Alphabetical Continuous Substring
+
+模拟遍历记录长度
+
+# 2415. Reverse Odd Levels of Binary Tree
+
+镜像遍历`dfs`
+
+# 2416. Sum of Prefix Scores of Strings
+
+`trie`或字符串`hash`
