--- a/2401-2500.md
+++ b/2401-2500.md
@@ -59,25 +59,61 @@
 模拟排序
 
 # 2419. Longest Subarray With Maximum Bitwise AND
+
 最大值的连续出现次数
 
 # 2420. Find All Good Indices
+
 枚举分别考虑前和后
+
 # 2421. Number of Good Paths
+
 按点权从小到大合并到并查集中
+
 # 2423. Remove Letter To Equalize Frequency
+
 模拟比较
+
 # 2424. Longest Uploaded Prefix
+
 求的值不会变小，记录下标模拟
+
 # 2425. Bitwise XOR of All Pairings
+
 分奇偶讨论
+
 # 2426. Number of Pairs Satisfying Inequality
+
 类似逆序对，树状数组
+
 # 2427. Number of Common Factors
+
 遍历
+
 # 2428. Maximum Sum of an Hourglass
+
 模拟
+
 # 2429. Minimize XOR
+
 贪心位运算
+
 # 2430. Maximum Deletions on a String
+
 从后往前`dp`，字符串hash，或者预处理某两个位置的最长公共前缀
+
+# 2432. The Employee That Worked on the Longest Task
+
+模拟
+
+# 2433. Find The Original Array of Prefix Xor
+
+前缀和、差分模拟
+
+# 2434. Using a Robot to Print the Lexicographically Smallest String
+
+栈模拟，后面有更小的则不出栈
+
+# 2435. Paths in Matrix Whose Sum Is Divisible by K
+
+将余数加入`dp`
