--- a/2401-2500.md
+++ b/2401-2500.md
@@ -117,3 +117,91 @@
 # 2435. Paths in Matrix Whose Sum Is Divisible by K
 
 将余数加入`dp`
+
+# 2437. Number of Valid Clock Times
+
+遍历判定是否合法
+
+# 2438. Range Product Queries of Powers
+
+预处理各个数，遍历求值
+
+# 2439. Minimize Maximum of Array
+
+贪心，考虑加入一个数的影响
+
+# 2440. Create Components With Same Value
+
+枚举因子，`dfs`按子树判定
+
+# 2441. Largest Positive Integer That Exists With Its Negative
+
+模拟
+
+# 2442. Count Number of Distinct Integers After Reverse Operations
+
+逆转模拟
+
+# 2443. Sum of Number and Its Reverse
+
+遍历模拟判定是否相等
+
+# 2444. Count Subarrays With Fixed Bounds
+
+枚举右端点，考虑最大最小值同时出现的位置
+
+# 2446. Determine if Two Events Have Conflict
+
+直接比较
+
+# 2447. Number of Subarrays With GCD Equal to K
+
+遍历计算`gcd`
+
+# 2448. Minimum Cost to Make Array Equal
+
+把`cost`看成这个数出现次数`cnt`，取中位数
+
+# 2449. Minimum Number of Operations to Make Arrays Similar
+
+分奇偶贪心
+
+# 2451. Odd String Difference
+
+把`difference`数组当成`key`
+
+# 2452. Words Within Two Edits of Dictionary
+
+循环判断
+
+# 2453. Destroy Sequential Targets
+
+取余后看相同余数个数
+
+# 2454. Next Greater Element IV
+
+两次单调栈，离线排序，再次在单调栈中二分
+
+可以考虑从上到下遍历数组（注意数组的四种遍历方式），`treeset`存储下表，求大于当前下标的第二个元素
+
+简单的方法还有单调栈之后在线段树上二分
+
+# 2455. Average Value of Even Numbers That Are Divisible by Three
+
+遍历模拟
+
+# 2456. Most Popular Video Creator
+
+模拟
+
+# 2457. Minimum Addition to Make Integer Beautiful
+
+不断`+1`直到产生进位，考虑每个位置进位，其他为`0`的情况
+
+# 2458. Height of Binary Tree After Subtree Removal Queries
+
+两次`dfs`，第一次记录每个节点的高度，第二次遍历考虑删除此点的结果
+
+或者记录同层的节点，删去此点，看其他点的值
+
+可以`dfs`序列，维护除去某个区间后的最大值
