--- a/2401-2500.md
+++ b/2401-2500.md
@@ -205,3 +205,11 @@
 或者记录同层的节点，删去此点，看其他点的值
 
 可以`dfs`序列，维护除去某个区间后的最大值
+# 2460. Apply Operations to an Array
+模拟
+# 2461. Maximum Sum of Distinct Subarrays With Length K
+滑动窗口
+# 2462. Total Cost to Hire K Workers
+堆模拟
+# 2463. Minimum Total Distance Traveled
+`dp[i][j]`表示第`i`个工厂处理了前`j`个机器人的情况，类似背包可以压缩一维
