--- a/2401-2500.md
+++ b/2401-2500.md
@@ -213,3 +213,11 @@
 堆模拟
 # 2463. Minimum Total Distance Traveled
 `dp[i][j]`表示第`i`个工厂处理了前`j`个机器人的情况，类似背包可以压缩一维
+# 2465. Number of Distinct Averages
+模拟
+# 2466. Count Ways To Build Good Strings
+动态规划
+# 2467. Most Profitable Path in a Tree
+两次`dfs`
+# 2468. Split Message Based on Limit
+枚举
